syntax = "proto3";

package log;

option go_package="log/logpb";

////////////////////////////////////////////////////////////////////////////////
// Log service
////////////////////////////////////////////////////////////////////////////////

enum LogLevel{
	FATAL_MESSAGE=0;
	ERROR_MESSAGE=1;
	WARN_MESSAGE=2;
	INFO_MESSAGE=3;
	DEBUG_MESSAGE=4;
	TRACE_MESSAGE=5;
}

message Occurence {
	int64 date = 1;
	string application = 2;
	string userId = 3;
	string userName = 4;
}

message LogInfo{
	LogLevel level = 1;
	string method = 2;
	string message = 3;
	string function_name = 4;
	string line = 5;
	repeated Occurence occurences = 6;
}

message LogRqst{
	LogInfo info = 1;
	Occurence occurence = 2;
}

message LogRsp{
	bool result=1;
}

message DeleteLogRqst{
	LogInfo log = 1;
}

message DeleteLogRsp{
	bool result=1;
}

message GetLogRqst{
	string query = 1;
}

message GetLogRsp{
	repeated LogInfo infos = 1;
}

message ClearAllLogRqst{
	string query = 1;
}

message ClearAllLogRsp{
	bool result=1;
}

service LogService {
	/** Set a method into the log... **/
	rpc Log(LogRqst) returns(LogRsp);
	
	/** Get the list of logs **/
	rpc GetLog(GetLogRqst) returns(stream GetLogRsp);

	/** Delete a single log entry **/
	rpc DeleteLog(DeleteLogRqst) returns(DeleteLogRsp);
	
	/** Delete all log or logs that match the key pattern... **/
	rpc ClearAllLog(ClearAllLogRqst) returns(ClearAllLogRsp);
}
